--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Hamburguesas Walty</h1>
+  <h1 class="bg-yellow-500 text-white">Hamburguesas Walty</h1>
+  <input class="border border-blue-500 placeholder-green-500" placeholder="Loren ipsum" type="text">
 </body>
 </html>
