--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <title>Hamburguesas Walty - ¿La Probaste?</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <h1 class="bg-yellow-500 text-white">Hamburguesas Walty</h1>
-  <input class="border border-blue-500 placeholder-green-500" placeholder="Loren ipsum" type="text">
+<body class="mx-4">
+  <h1 class="h-32 w-1/5 my-8 mx-auto bg-yellow-500 text-white">Hamburguesas Walty</h1>
+  <input class="py-1 px-4 border border-blue-500 placeholder-green-500" placeholder="Loren ipsum" type="text">
 </body>
 </html>
