--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hamburguesas Walty - ¿La Probaste?</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body class="mx-4">
-  <h1 class="h-32 w-1/5 my-8 mx-auto bg-yellow-500 text-white">Hamburguesas Walty</h1>
-  <input class="py-1 px-4 border border-blue-500 placeholder-green-500" placeholder="Loren ipsum" type="text">
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hamburguesas Walty - ¿La Probaste?</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body class="min-h-screen bg-gray-400 mx-4 mb-8">
+    <div class="mt-4 md:w-1/2 md:flex md:bg-white rounded-lg">
+      <div>
+        <img
+          class="md:w-full rounded lg"
+          src="./images/burger1.jpg"
+          alt="Hamburguesa"
+        />
+      </div>
+      <div
+        class="relative shadow-lg mx-2 p-2 bg-white md:bg-transparent rounded-lg -mt-2"
+      >
+        <h2
+          class="text-xl tracking-tight font-semibold text-gray-900 uppercase md: text-lg"
+        >
+          Hamburguesa con Cheddar y Panceta
+        </h2>
+        <p class="text-gray-700 leading-snug">
+          Hamburguesa con queso y Aderezo
+        </p>
+        <div class="mt-2 text-sm font-semibold text-gray-700">$180</div>
+        <div class="mt-2 text-xs text-yellow-700">
+          &starf; &starf; &starf; &starf; &star;/ 36 Reseñas
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
