--- a/public/header.html
+++ b/public/header.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="px-2 bg-secondary flex justify-between items-center">
+    <div class="px-2 bg-gray-900 text-white flex justify-between items-center">
       <div><img class="h-8 py-1" src="images/walty.png" alt="walty" /></div>
       <div class="text-2xl">&equiv;</div>
     </div>
